# crawliq.io

./: .env.example  .gitignore  .hfignore  DESIGN.md  Dockerfile  QA_REPORT_V2.md  QA_REPORT_V3.md  README.md  _headers  about.html  features.html  how-it-works.html  index.html  main.py  map_code.py  pyproject.toml  robots.txt  sitemap.html  sitemap.xml
.github/workflows/: deploy-pages.yml  deploy.yml
_backup/: index.html.bak  main.css.bak
app/: index.html
backend/: 1.35.0  ai_analysis.py  ai_fallback.py  auth.py  billing.py  claude_adapter.py  competitor.py  competitor_analysis.py  competitor_db.py  content_dedup.py  crawl_engine.py  crawler.py  crawler_fetch_patch.py  database.py  email_alerts.py  full_audit_engine.py  gemini_analysis.py  groq_adapter.py  index.html  intent_classifier.py  issues.py  keyword_extractor.py  keyword_pipeline.py  keyword_scorer.py  link_graph.py  main.py  monitor.py  ollama_adapter.py  openai_adapter.py  pdf_export.py  requirements.txt  robust_fetch.py  schema_validator.py  seo_audit_engine.py  seo_optimizer.py  serp_engine.py  serp_scraper.py  site_auditor.py  streamlit_app.py  streamlit_app_ui.py  (+2 more)
backend/pages/: _shared.css  ai-content.html  app.html  competitor.html  index.html  keyword-gap.html  monitor.html  serp-intel.html  sitemap.html  tech-seo.html
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
static/css/: landing.css  main.css
static/js/: api.js  app.js  core.js  crawl.js  dashboard.js  landing.js  noncritical.js  tools-shared.js  ui.js
(+19 files in other folders)
