[project]
name = "crawliq-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "lxml>=6.1.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "textstat>=0.7.13",
    "uvicorn>=0.46.0",
]
